# labeler

./: Dockerfile  README.md  nickel_mines.csv  pyproject.toml
annotations/: babbit-minnamax__site-babbit-minnamax-mudd-and-jowitt-2022-nickel-miller-et-al-2002-miller-2015.json  benbow__site-benbow-mudd-and-jowitt-2022-nickel-tech-rep-2009-06.json  birch-lake__site-birch-lake-mudd-and-jowitt-2022-nickel-ar-2018.json  bohemia-basin-basin-takanis-flapjack__site-bohemia-basin-basin-takanis-flapjack-mudd-and-jowitt-2022-nickel-szumigala-et-al-2011.json  crescent-creek__site-crescent-creek-mudd-and-jowitt-2022-nickel-tech-rep-2009-06.json  dunka-pit__site-dunka-pit-mudd-and-jowitt-2022-nickel-miller-et-al-2002-miller-2015.json  eagle-eagle-east-usa__site-eagle-eagle-east-usa-mudd-and-jowitt-2022-nickel-resv-resc-2018.json  first-independent-technical-report-on-the-tamarack-north-project__httpsw3idorgusgsz4530692xm7acjdk1.json  funter-bay__site-funter-bay-mudd-and-jowitt-2022-nickel-szumigala-et-al-2011.json  gap__site-gap-mudd-and-jowitt-2022-nickel-long-1992.json  gasquet-mountain__site-gasquet-mountain-mudd-and-jowitt-2022-nickel-pers-comm-golightly.json  higdon__site-higdon-mudd-and-jowitt-2022-nickel-singer-et-al-2009.json  local-boy__site-local-boy-mudd-and-jowitt-2022-nickel-teck-2010.json  maturi-incl-nokomis__site-maturi-incl-nokomis-mudd-and-jowitt-2022-nickel-ar-2018.json  maturi-southwest__site-maturi-southwest-mudd-and-jowitt-2022-nickel-ar-2018.json  mesaba-babbit__site-mesaba-babbit-mudd-and-jowitt-2022-nickel-mayhew-et-al-2009-teck-2010.json  (+18 more)
labeler/: misc.py  (+5 more)
(+3 files in other folders)
